@@ -1,15 +1,0 @@
-@comment $NetBSD: PLIST,v 1.11 2018/01/01 22:29:55 rillig Exp $
-bin/uvscan
-libexec/uvscan/liblnxfv.so
-libexec/uvscan/liblnxfv.so.4
-libexec/uvscan/license.dat
-libexec/uvscan/messages.dat
-libexec/uvscan/uvscan
-man/man1/uvscan.1
-sbin/update_dat
-share/doc/uvscan/contact.txt
-share/doc/uvscan/e5100upg.pdf
-share/doc/uvscan/license.txt
-share/examples/uvscan/clean.dat
-share/examples/uvscan/names.dat
-share/examples/uvscan/scan.dat
